<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pokemonActivity.PokemonActivity">

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:ems="8"
        android:hint="@string/searchEditTextHint"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,TextContrastCheck" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/searchButtonTextDefault"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/searchEditText"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/pokemonNameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/unknownPokemonName"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchEditText" />

    <ImageView
        android:id="@+id/pokemonImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:src="?android:attr/alertDialogIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemonNameDisplay"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/pokemonHeightDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/unknownPokemonHeight"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/heightTitle"
        app:layout_constraintStart_toEndOf="@+id/heightTitle" />

    <TextView
        android:id="@+id/pokemonWeightDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/unknownPokemonWeight"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/weightTitle"
        app:layout_constraintStart_toEndOf="@+id/weightTitle" />

    <TextView
        android:id="@+id/pokemonSpeciesDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/unknownSpecies"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speciesTitle" />

    <TextView
        android:id="@+id/heightTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/heightTitleDefault"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemonImage" />

    <TextView
        android:id="@+id/speciesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/speciesTitleDefaultMain"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightTitle" />

    <TextView
        android:id="@+id/weightTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/weightTitleDefault"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightTitle" />

    <Button
        android:id="@+id/typesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/typesButtonTextDefault"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/abilitiesButton"
        app:layout_constraintTop_toBottomOf="@+id/pokemonSpeciesDisplay" />

    <Button
        android:id="@+id/abilitiesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/abilitiesButtonTextDefault"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/typesButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemonSpeciesDisplay" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>